--- a/Sprint 12 Project Reviewed.ipynb
+++ b/Sprint 12 Project Reviewed.ipynb
@@ -69,22 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sprint 12 Project  \n",
+    "#### Sprint 12 Project:\n",
     "Numerical Methods"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Things to fix:\n",
-    "X Fix captions on the prediction and rmse of the models. (It's prediction on the training set not the test set.) *done* \n",
-    "X Make a prediction on the test set. *done*\n",
-    "X Make sure there are eda charts for the non outlier and outlier values, one full picture and one close up for each. *done*\n",
-    "X Make sure gridsearch results are correct when you run the models again. *done but should check one more time*\n",
-    "X Rewrite model analysis. *done* \n",
-    "X Make conclusions for the EDA charts. *done* \n",
-    "* Rewrite final conclusion and add labels/ markdown headers for EDA charts"
    ]
   },
   {
@@ -962,6 +948,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Vehicle Price Distributions Histograms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1059,6 +1052,13 @@
    "source": [
     "#### Note to Reviewer:\n",
     "This is my updated histogram."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Average Vehicle Price Per Vehicle Type Boxplots"
    ]
   },
   {
@@ -1206,6 +1206,13 @@
     "According to the boxplot, the vehicle type with the highest median vehicle price value is: suv, with a median price value of: \n",
     "approximately 9,000 Euros.  The vehicle type with the lowest median price value is: small, with a median price value of: \n",
     "approximately: 2,050 Euros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Average Vehicle Price Per Fuel Type Boxplots"
    ]
   },
   {
@@ -1366,6 +1373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Average Vehicle Price Based On Gearbox Type Boxplots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1499,6 +1513,13 @@
     "Chart Conclusion:\n",
     "According to the boxplot, cars with the auto gearbox type have a higher median vehicle price (approximately 6,500 Euros) \n",
     "than cars with the manual gearbox type (approximately 3,100 Euros)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Average Vehicle Price Based On Repair Status Boxplots"
    ]
   },
   {
