--- a/Sprint 12 Project Reviewed 2.ipynb
+++ b/Sprint 12 Project Reviewed 2.ipynb
@@ -2641,6 +2641,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note to Reviewer:\n",
+    "I decided to get rid of these two dataframes, so these comments may be irrelevant for this review.\n",
+    "Thank you for the suggestions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-danger\" style=\"border-radius: 15px; box-shadow: 4px 4px 4px; border: 1px solid \">\n",
     "<h2>   Reviewer's comment 2 </h2>\n",
     "   \n",
