--- a/Sprint 12 Project Reviewed 3.ipynb
+++ b/Sprint 12 Project Reviewed 3.ipynb
@@ -8084,52 +8084,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Baseline RMSE (Training Set): 4326.419271803521\n",
-    "Baseline RMSE Error Percentage (Training Set): 83.65 %\n",
+    "Baseline RMSE (Training Set): 4460.21\n",
+    "Baseline RMSE Error Percentage (Training Set): 84.40 %\n",
     "\n",
     "Models Ranked Based on RMSE:\n",
     "\n",
     "1) Random Forest Regressor Model\n",
-    "Random Forest Regressor RMSE: 601.512998833745\n",
-    "Random Forest Regressor RMSE Error Percentage: 11.63 %\n",
-    "Random Forest Regressor Training Time: 42.50601601600647 seconds \n",
-    "Random Forest Regressor Prediction Time: 4.156696081161499 seconds\n",
+    "Random Forest Regressor RMSE: 597.36\n",
+    "Random Forest Regressor RMSE Error Percentage: 11.30 % \n",
+    "Random Forest Regressor Training Time: 42.63 seconds \n",
+    "Random Forest Regressor Prediction Time: 3.96 seconds\n",
     "\n",
     "2) Light GBM Regressor Model\n",
-    "Light GBM Regressor RMSE: 1448.5635289493914\n",
-    "Light GBM Regressor RMSE Error Percentage: 28.01 % \n",
-    "Light GBM Regressor Model Training Time: 4.369007349014282 seconds \n",
-    "Light GBM Regressor Prediction Time: 0.560554027557373 seconds\n",
+    "Light GBM Regressor RMSE: 1356.62\n",
+    "Light GBM Regressor RMSE Error Percentage: 25.67 % \n",
+    "Light GBM Regressor Model Training Time: 1.28 seconds \n",
+    "Light GBM Regressor Prediction Time: 0.77 seconds\n",
     "\n",
     "3) CatBoost Regressor Model\n",
-    "CatBoost Regressor Model RMSE 1501.5514535437026\n",
-    "CatBoost Regressor RMSE Error Percentage: 29.03 % \n",
-    "CatBoost Regressor Training Time: 6.038869857788086 Seconds\n",
-    "CatBoost Regressor Prediction Time: 0.26394104957580566\n",
+    "CatBoost Regressor Model RMSE 1491.58\n",
+    "CatBoost Regressor RMSE Error Percentage: 28.23 % \n",
+    "CatBoost Regressor Training Time: 3.85 Seconds \n",
+    "CatBoost Regressor Prediction Time: 0.10\n",
     "\n",
     "4) XG Boost Regressor Model\n",
-    "XG Boost Regressor RMSE: 1510.107198181639\n",
-    "XG Boost Regressor RMSE Error Percentage: 29.20 %\n",
-    "XG Boost Regressor Training Time 6.229076147079468 seconds\n",
-    "XG Boost Regressor Prediction Time: 0.8111977577209473 seconds\n",
+    "XG Boost Regressor RMSE: 1495.96\n",
+    "XG Boost Regressor RMSE Error Percentage: 28.31 % \n",
+    "XG Boost Regressor Training Time 5.34 seconds \n",
+    "XG Boost Regressor Prediction Time: 0.67 seconds\n",
     "\n",
     "5) Decision Tree Regressor Model\n",
-    "Decision Tree Regressor RMSE: 1972.2599741683289\n",
-    "Decision Tree Regressor Error Percentage: 38.13 % \n",
-    "Decision Tree Regressor Training Time 0.9097988605499268 seconds\n",
-    "Decision Tree Regressor Prediction Time: 1743111871.7068527 seconds\n",
+    "Decision Tree Regressor RMSE: 2163.39\n",
+    "Decision Tree Regressor Error Percentage: 40.94 % \n",
+    "Decision Tree Regressor Training Time 0.52 seconds \n",
+    "Decision Tree Regressor Prediction Time: 1743725092.55 seconds\n",
     "\n",
     "6) Linear Regression Model\n",
-    "Linear Regression Model RMSE 2107.0620381057824\n",
-    "Linear Regressor RMSE Error Percentage: 40.74 % \n",
-    "Linear Regression Model Training Time 6.587268352508545 seconds\n",
-    "Linear Regression Model Prediction Time 1743111620.0646627 seconds\n",
+    "Linear Regression Model RMSE 2128.26\n",
+    "Linear Regressor RMSE Error Percentage: 40.27 % \n",
+    "Linear Regression Model Training Time 3.54 seconds \n",
+    "Linear Regression Model Prediction Time 1743724895.59 seconds \n",
     "\n",
     "7) SGD Linear Regression Model\n",
-    "SGD Linear Regression RMSE: 2197.9301915213923\n",
-    "SGD Linear Regression RMSE Error Percentage: 42.50 % \n",
-    "SGD Linear Regression Training Time 36.92376399040222 seconds\n",
-    "SGD Prediction Time 0.14149045944213867 seconds\n",
+    "SGD Linear Regression RMSE: 2226.73\n",
+    "SGD Linear Regression RMSE Error Percentage: 42.14 %\n",
+    "SGD Linear Regression Training Time 23.10 seconds \n",
+    "SGD Prediction Time 0.11 seconds\n",
     "\n",
     "Results Observation:\n",
     "Accoriding to the results, it appears that the Random Forest Regressor Model with tuned hyperparameters had a better RMSE \n",
@@ -8287,32 +8287,32 @@
     "\n",
     "Models Ranked From Highest RMSE Score To Lowest RMSE Score (Training Set Predictions):\n",
     "1) Random Forest Regressor Model\n",
-    "Random Forest Regressor RMSE: 601.512998833745\n",
-    "Random Forest Regressor RMSE Error Percentage: 11.63 %\n",
+    "Random Forest Regressor RMSE: 597.36\n",
+    "Random Forest Regressor RMSE Error Percentage: 11.30 % \n",
     "\n",
     "2) Light GBM Regressor Model\n",
-    "Light GBM Regressor RMSE: 1448.5635289493914\n",
-    "Light GBM Regressor RMSE Error Percentage: 28.01 %  \n",
+    "Light GBM Regressor RMSE: 1356.62\n",
+    "Light GBM Regressor RMSE Error Percentage: 25.67 % \n",
     "\n",
     "3) CatBoost Regressor Model\n",
-    "CatBoost Regressor Model RMSE 1501.5514535437026\n",
-    "CatBoost Regressor RMSE Error Percentage: 29.03 % \n",
+    "CatBoost Regressor Model RMSE 1491.58\n",
+    "CatBoost Regressor RMSE Error Percentage: 28.23 % \n",
     "\n",
     "4) XG Boost Regressor Model\n",
-    "XG Boost Regressor RMSE: 1510.107198181639\n",
-    "XG Boost Regressor RMSE Error Percentage: 29.20 %\n",
+    "XG Boost Regressor RMSE: 1495.96\n",
+    "XG Boost Regressor RMSE Error Percentage: 28.31 % \n",
     "\n",
     "5) Decision Tree Regressor Model\n",
-    "Decision Tree Regressor RMSE: 1972.2599741683289\n",
-    "Decision Tree Regressor Error Percentage: 38.13 %  \n",
+    "Decision Tree Regressor RMSE: 2163.39\n",
+    "Decision Tree Regressor Error Percentage: 40.94 % \n",
     "\n",
     "6) Linear Regression Model\n",
-    "Linear Regression Model RMSE 2107.0620381057824\n",
-    "Linear Regressor RMSE Error Percentage: 40.74 %  \n",
+    "Linear Regression Model RMSE 2128.26\n",
+    "Linear Regressor RMSE Error Percentage: 40.27 % \n",
     "\n",
     "7) SGD Linear Regression Model\n",
-    "SGD Linear Regression RMSE: 2197.9301915213923\n",
-    "SGD Linear Regression RMSE Error Percentage: 42.50 % \n",
+    "SGD Linear Regression RMSE: 2226.73\n",
+    "SGD Linear Regression RMSE Error Percentage: 42.14 %\n",
     "\n",
     "Other Observations:\n",
     "* When making predictions, the Random Forest Regressor model did better on the training set than on the test set.\n",
