final conclusion update

--- a/Sprint 12 Project Reviewed 3.ipynb
+++ b/Sprint 12 Project Reviewed 3.ipynb
@@ -8205,15 +8205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Regressor Prediction Time (Test Set): 5.537988185882568 seconds\n",
-      "Random Forest Regressor RMSE (Test Set): 1527.7415234787072\n",
+      "Random Forest Regressor Prediction Time (Test Set): 2.22 seconds\n",
+      "Random Forest Regressor RMSE (Test Set): 1527.74\n",
       "Random Forest Regressor RMSE Percentage Test Set \n",
       " 28.91 %\n"
      ]
@@ -8235,14 +8235,14 @@
     "#Calculate the model's total prediction time by subtracting the end time from the start time. \n",
     "rfr_predicted_test_time = rfr_test_et - rfr_test_st \n",
     "#Print the model's total prediction time. \n",
-    "print(f\"Random Forest Regressor Prediction Time (Test Set): {rfr_predicted_test_time} seconds\")\n",
+    "print(f\"Random Forest Regressor Prediction Time (Test Set): {rfr_predicted_test_time:.2f} seconds\")\n",
     "\n",
     "#Use the rmse() method in order to print the rmse between the test set of the target dataset\n",
     "#and the model's predicted values. \n",
     "rfr_test_rmse = rmse(y_test, rfr_test_predicted) \n",
     "\n",
     "#Print the model's RMSE. \n",
-    "print(f\"Random Forest Regressor RMSE (Test Set): {rfr_test_rmse}\")\n",
+    "print(f\"Random Forest Regressor RMSE (Test Set): {rfr_test_rmse:.2f}\")\n",
     "#Print the model's RMSE error percentage.\n",
     "print(f\"Random Forest Regressor RMSE Percentage Test Set \\n {rmse_percentage(rfr_test_rmse, price_mean):.2f} %\")"
    ]
@@ -8277,13 +8277,12 @@
     "#### Final Conclusion:\n",
     "    It appears that the Random Forest Regressor model with tuned hyperparameters is the best model for predicting\n",
     "future car market values.  When making predicitons on the training set, the Random Forest Regressor Model had an\n",
-    "RMSE score of: 601.512998833745 and an RMSE error Percentage of: 11.63%.  When making predictions of the test set,\n",
-    "the Random Forest Regressor Model had an RMSE score of: 1545.8632079286108 and an RMSE  error percentage 28.89 %.\n",
+    "RMSE score of: 597.36 and an RMSE error Percentage of: 11.30%.  When making predictions of the test set,\n",
+    "the Random Forest Regressor Model had an RMSE score of: 1527.74 and an RMSE error percentage of 28.91%.\n",
     "    Although, the Random Forest Regressor model had the best RMSE score of all the models, its training and prediciton \n",
     "time was slower than the other models.  When making predicitons on the training set, the Random Forest Regressor model\n",
-    "had a training time of: 42.50601601600647 seconds and a prediction time of: 4.156696081161499 seconds.  When making\n",
-    "predictions the test set, the Random Forest Regressor Model had a prediction time of: 8.707719326019287 seconds.\n",
-    "\n",
+    "had a training time of: 42.63 seconds and a prediction time of: 3.96 seconds.  When making\n",
+    "predictions the test set, the Random Forest Regressor Model had a prediction time of: 2.2 seconds.\n",
     "\n",
     "Models Ranked From Highest RMSE Score To Lowest RMSE Score (Training Set Predictions):\n",
     "1) Random Forest Regressor Model\n",
